@@ -2,6 +2,8 @@ package net.sf.jrtps.udds;
 
 import java.util.Set;
 
+import net.sf.jrtps.message.parameter.KeyHash;
+
 /**
  * HistoryCache represents a uDDS history cache. 
  *
@@ -50,4 +52,11 @@ public interface HistoryCache<T> {
      * @return a Set of instances
      */
     Set<Instance<T>> getInstances();
+    
+    /**
+     * Get an Instance represented by given KeyHash
+     * @param key
+     * @return Instance, or null if there was not Instance with given key
+     */
+    Instance<T> getInstance(KeyHash key);
 }
